fix(CUI-7431) : Regression Close(clear) button of Search box is misaligned

--- a/coral-css-decoratedtextfield/src/styles/index.styl
+++ b/coral-css-decoratedtextfield/src/styles/index.styl
@@ -24,6 +24,7 @@
   > .coral-DecoratedTextfield-button._coral-Button {
     margin-right: 0;
     max-width: var(--spectrum-medium-clearbutton-medium-width);
+    position: absolute;
   }
 
   // @compat
